# port-net-library

./: .gitattributes  .gitignore  Makefile  Makefile.am  Makefile.in  README.md  confdefs.h  config.status  configure  configure.ac  conftest.c  libtool
.github/workflows/: build.yml
app/: Makefile.dpdk.in  Makefile.in  ndpiReader.c  reader_util.c  run
app/etc/: run.config
app/include/: _app_config.h  _app_global.h  _build_config.h  headers-test.h  headers.h  lib-analytics.h  lib-array.h  lib-base.h  lib-cipher.h  lib-csv.h  lib-data.h  lib-display.h  lib-flow.h  lib-format.h  lib-headers.h  lib-log.h  lib-ndpi.h  lib-port.h  lib-print-ncurses.h  lib-print.h  lib-reader.h  lib-receiver.h  lib-scanner.h  lib-string.h  lib-threadgroup.h  lib-threadpool.h  lib-zmq.h  reader_util.h
app/lib/common/: _app_global.c  lib-array.c  lib-log.c  lib-string.c  lib-threadgroup.c  lib-threadpool.c
app/lib/csv/: lib-csv.c
app/lib/display/: lib-display.c  lib-print-ncurses.c  lib-print.c
app/lib/ndpi/: lib-analytics.c  lib-cipher.c  lib-flow.c  lib-format.c  (+5 more)
app/notes/: lib-print-backup.c  lib-print-original.c  ndpiReader-clean.c  ndpiReader-marked.c
app/zmq-test/: lib-string.c  lib-string.h  run  zmq-pub.c  zmq-sub.c
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.2  traces.3
example/: -C  Makefile  Makefile.dpdk  ndpiReader  ndpiReader.c  output-1.json  output.json  test.csv
influxdb/: Makefile
src/include/: ndpi_config.h  ndpi_config.h.in  ndpi_config.h.in~  ndpi_define.h
src/lib/: Makefile  Makefile.in  libndpi.so.4  libndpi.so.4.10.0
tests/: Makefile  Makefile.am  Makefile.in  do.sh  do.sh.in  ossfuzz.sh
tests/dga/: Makefile  dga_evaluate
tests/performance/: Makefile
tests/unit/: Makefile  unit
(+3 files in other folders)
